[package]
name = "axolotl-noise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

md5 = { version = "0.7.0", optional = true }
rand_xoshiro = { version = "0.6.0", optional = true }

[features]
minecraft = ["md5", "rand_xoshiro"]