[package]
name = "axolotl-noise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"

md5 = { version = "0.7", optional = true }
rand_xoshiro = { version = "0.6", optional = true }
log = "0.4"

[dev-dependencies]
simple_logger = "2.3.0"
[features]
minecraft = ["md5", "rand_xoshiro"]
debug = []